--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/stack": "^7.6.11",
+    "body-parser": "^2.2.1",
+    "cors": "^2.8.5",
     "expo": "~54.0.26",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -30,6 +32,8 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "express": "^5.2.1",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
